# ISAC

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README  README.MD  README.md  README_ja.md  README_zh.MD  README_zh.md  ToS and privacy.md  screenshot_output.html  test.json
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yaml
recent_DB/: clean.py  run.py
renderer/: renderer.py
renderer/template/: clan.html  clan_season.hbs  clan_season.html  kleaderboard.hbs  leaderboard.hbs  leaderboard.html  overall.hbs  overall.html  overall_cw.hbs  overall_tiers.hbs  overall_tiers.html  recent.hbs  recent.html  server_top.hbs  single_ship.hbs  single_ship.html
renderer_template/: clan.html  clan_season.html  overall.html  overall_tiers.html  recent.html  ship_rank.html  single_ship.html  template_test.py
src/: cmds.rs  dc_utils.rs  main.rs  renderer.rs  structs.rs  tasks.rs  template_data.rs  utils.rs
src/cmds/: clan.rs  clan_top.rs  general.rs  leaderboard.rs  mod.rs  owner.rs  patreon.rs  recent.rs  server_top.rs  setting.rs  test.rs  tools.rs  top.rs  wws.rs
src/dc_utils/: args.rs  auto_complete.rs  autocomplete.rs  context.rs  create_reply.rs  embed.rs  interaction.rs  mod.rs  user.rs
src/structs/: api.rs  auto_complete.rs  clan.rs  clan_battles_season_stats.rs  clan_detail.rs  color.rs  dogtag.rs  linked.rs  little_constant.rs  lru_vector.rs  patron.rs  player.rs  recent.rs  region.rs  ship.rs  ship_leaderboard.rs  ships_para.rs  statistic.rs  user_search_history.rs
src/tasks/: browser.rs  expected.rs  patreon.rs  ships_para.rs
src/template_data/: clan.rs  clan_season.rs  leaderboard.rs  overall.rs  overall_cw.rs  recent.rs  server_top.rs  single_ship.rs
src/utils/: cache_methods.rs  error_handler.rs  isac_error.rs  json.rs  mod.rs  parse.rs  player_common.rs  ship.rs  structs.rs  structs_modified.rs  user.rs  wows_number.rs  wws_api.rs
src/utils/structs/: api.rs  clan.rs  clan_battles_season_stats.rs  clan_detail.rs  color.rs  dogtag.rs  expected_js.rs  linked.rs  little_constant.rs  mod.rs  mode.rs  patron.rs  player.rs  recent.rs  region.rs  ship.rs  ship_leaderboard.rs  ships_para.rs  statistic.rs
src/utils/structs/ship/: intermediate.rs
src/utils/structs/template_data/: clan.rs  clan_season.rs  leaderboard.rs  mod.rs  overall.rs  recent.rs  single_ship.rs
test_res/: vortex-ship-response-hidden.json  vortex-ship-response.json
venv_renderer/: pyproject.toml
