[package]
name = "isac-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
dotenv = "0.15.0"
expand = "0.3.0"
fantoccini = "0.19.3"
futures = "0.3.28"
fuzzy-matcher = "0.3.7"
handlebars = "4.4.0"
indexmap = { version = "2.0.2", features = ["serde"] }
itertools = "0.11.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"


poise = "0.5.6"
# poise = {version = "0.5.5", path="D:/GitHub/poise/"}
# serenity = {git = "https://github.com/serenity-rs/serenity/", branch="next"}
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "serde_json"] }
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
serde_with = "3.4.0"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unidecode = "0.3.0"
