[package]
name = "isac-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.28"
fuzzy-matcher = "0.3.7"
itertools = "0.14.0"
libc = "0.2.153"
lru = "0.16.3"
once_cell = "1.18.0"
parking_lot = "0.12.1"


poise = "0.6.1"
# poise = {version = "0.5.5", path="D:/GitHub/poise/"}
# serenity = {git = "https://github.com/serenity-rs/serenity/", branch="next"}
rand = "0.9.0"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.22.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.16"
serde_with = "3.4.0"
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
thiserror = "2.0.11"
tokio = { version = "1.38.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unidecode = "0.3.0"
ureq = { version = "3.0.11", features = ["json", "cookies"] }
