[tool.poetry]
name = "venv-renderer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
pystache = "^0.6.5"
quart = "^0.19.4"
playwright = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
