[project]
name = "venv-renderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "apscheduler>=3.11.0",
    "playwright>=1.51.0",
    "pystache>=0.6.8",
    "python-dotenv>=1.1.0",
    "quart>=0.20.0",
]
